--- a/pom.xml
+++ b/pom.xml
@@ -132,8 +132,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>23</source>   <!-- Cambiado a Java 23 -->
+                    <target>23</target>   <!-- Cambiado a Java 23 -->
                 </configuration>
             </plugin>
             <plugin>
